--- a/page/pages/guify/index.pug
+++ b/page/pages/guify/index.pug
@@ -50,28 +50,31 @@ append head
     style.
 
         #guify-container {
-            width: 512px;
-            height: 512px;
+            max-width: 512px;
+            max-height: 512px;
+            width: 80vw;
+            height: 80vw;
             display: block;
             margin-left: auto;
             margin-right: auto;
-            margin-top: 3em;
+            margin-top: 5em;
+            margin-bottom: 1.5em;
             position: relative;
-            background-color: white;
         }
 
         #guify-container-content {
-            width: 512px;
-            height: 512px;
+            width: 100%;
+            height: 100%;
             position: relative;
             background-color: rgb(255, 255, 230);
+
+            display: flex;
+            justify-content: center; /* align horizontal */
+            align-items: center; /* align vertical */
         }
 
         #content-text {
             font-family: monospace;
-            text-align: center;
-            vertical-align: middle;
-            line-height: 512px;
         }
         
 
