Update pages with Guify

--- a/page/pages/jon-trombone/index.pug
+++ b/page/pages/jon-trombone/index.pug
@@ -53,6 +53,9 @@ append head
             height: 100% !important;
         }  
 
+    // Get latest version of Guify off of NPM
+    script(src='https://unpkg.com/guify')
+
 
 
 
@@ -84,5 +87,4 @@ append content
 
 append body
     script(src='js/jon-trombone.min.js')
-    link(rel='stylesheet', type='text/css', href='dat-gui.css')
 
