--- a/page/pages/mazer/index.pug
+++ b/page/pages/mazer/index.pug
@@ -43,6 +43,9 @@ append head
             position: relative;
         }
         
+    // Get latest version of Guify off of NPM
+    script(src='https://unpkg.com/guify')
+        
 
 append content
     .row
