Fix broken images and links

--- a/page/index.pug
+++ b/page/index.pug
@@ -90,7 +90,7 @@ append content
                     with and without simulated eye disease.
             li
                 p
-                    a(href='/spuriousspatialcorrelations.html') Spurious (Spatial) Correlations
+                    a(href='/pages/spurious-spatial-correlations') Spurious (Spatial) Correlations
             li
                 p
                     a(href='https://play.google.com/store/apps/details?id=com.jon.msf2016app&hl=en') Maine Science Festival 2016 AR App
