--- a/page/pages/guify/index.pug
+++ b/page/pages/guify/index.pug
@@ -106,13 +106,13 @@ append content
                     while working on the other JavaScript projects on this website, but I was frustrated
                     with its limitations and wanted something better.
                 p.
-                    Guify is my solution. It's easy to use on mobile, easy to add new functionality to,
-                    easy to customize its look, and built with accessibility in mind.
+                    Guify is my solution. It's easy to use on mobile, easy to customize visually and functionally,
+                    and it's built with accessibility in mind.
                 p.
-                    You can find more information on the GitHub repo, and you can get the latest version yourself at
-                    <a href="https://unpkg.com/guify">unpkg.com/guify</a> or as an 
-                    <a href="https://www.npmjs.com/package/guify">NPM package</a>.
-
+                    You can find more information on the <a href="https://github.com/colejd/guify">GitHub repo</a>, 
+                    and you can get the latest version yourself as an <a href="https://www.npmjs.com/package/guify">NPM package</a> 
+                    or for browser embedding through a CDN at <a href="https://unpkg.com/guify">unpkg.com/guify</a>.
+                    
 
 append body
     // Get latest version of Guify off of NPM
