--- a/page/pages/reaction-diffusion/index.pug
+++ b/page/pages/reaction-diffusion/index.pug
@@ -49,6 +49,7 @@ append head
             margin-top: 5em;
             margin-bottom: 1.5em;
             position: relative;
+            user-select: none;
         }
 
 
