Add `user-select: none` to container to prevent selection during mouse/touch interactions

--- a/page/pages/reaction-diffusion/index.pug
+++ b/page/pages/reaction-diffusion/index.pug
@@ -49,7 +49,10 @@ append head
             margin-top: 5em;
             margin-bottom: 1.5em;
             position: relative;
+            
             user-select: none;
+            -moz-user-select: none;
+            -webkit-user-select: none;
         }
 
 
