--- a/page/pages/lobo/index.pug
+++ b/page/pages/lobo/index.pug
@@ -49,9 +49,10 @@ append head
     link(rel='stylesheet', href='TemplateData/style.css')
     script(src='TemplateData/UnityProgress.js')
 
-
+append title
+    | LOBO Buoy Visualizer
+    
 append content
-    h1 LOBO Buoy Visualizer
     // Content here
     .logo
     .fullscreen
