--- a/page/pages/reaction-diffusion/index.pug
+++ b/page/pages/reaction-diffusion/index.pug
@@ -46,7 +46,7 @@ append head
             display: block;
             margin-left: auto;
             margin-right: auto;
-            margin-top: 5em;
+            margin-top: 3em;
             margin-bottom: 1.5em;
             position: relative;
             
@@ -55,6 +55,8 @@ append head
             -webkit-user-select: none;
         }
 
+append title
+    | Reaction-Diffusion Simulator
 
 append content
     object
@@ -62,7 +64,7 @@ append content
     p(style='text-align:center')
         strong Epilepsy Warning:
         |  Some settings can cause bright flashing.
-    hr
+
     section
         h1 Reaction-Diffusion Simulator
         p
