--- a/page/pages/reflector/index.pug
+++ b/page/pages/reflector/index.pug
@@ -31,9 +31,10 @@ append head
     link(rel='stylesheet', href='TemplateData/style.css')
     script(src='TemplateData/UnityProgress.js')
 
+append title
+    | Reflector Test
+
 append content
-    h1 Reflector Test
-    // Content here
     .logo
     .fullscreen
         img(src='TemplateData/fullscreen.png', width='38', height='38', alt='Fullscreen', title='Fullscreen', onclick='SetFullscreen(1);')
