--- a/sass/modules/fonts.scss
+++ b/sass/modules/fonts.scss
@@ -3,8 +3,8 @@
 //@import "https://fonts.googleapis.com/css?family=Work+Sans:400,500";
 //@import "https://fonts.googleapis.com/css?family=Fira+Mono:400,700";
 
-$title-font: 'Ubuntu', Helvetica, Arial, sans-serif;
+//$title-font: 'Ubuntu', Helvetica, Arial, sans-serif;
+$title-font: 'Work Sans', sans-serif;
 $header-font: 'Work Sans', sans-serif;
-
-$body-font: 'Work Sans', sans-serif;
+$body-font: 'Lato', sans-serif;
 $code-font: 'Fira Mono', monospace;
