--- a/page/about.pug
+++ b/page/about.pug
@@ -28,35 +28,38 @@ block dinosaur
 
 append headinfo
     meta(name='ROBOTS', content='INDEX, FOLLOW')
-    meta(name='description', content='Bio and contact information for Jonathan Cole.')
+    meta(name='description', content='Bio and contact information for Jonathan Cole')
     meta(name='keywords', content='UMaine, Jonathan, Cole, SIE, Spatial, Computer, Science, VEMI')
     title About Jon
 
+append title
+    | About Me
 
 append content
-    h1 About Me
+    // Inline style for profile image
+    style.
+        /* Sidebar enabled style (desktop) */
+        @media(min-width: 481px) {
+            .about-image {
+                width: 250px; 
+                height: auto;
+            }
+        }
+        /* Sidebar disabled style (mobile) */
+        @media(max-width: 480px) {
+            .about-image {
+                width: 70%; 
+                max-width: 250px !important;
+                height: auto;
+                margin-left: auto !important;
+                margin-right: auto !important;
+                float: none !important;
+            }
+        }
+        
     .row
-        // Inline style for about image
-        style.
-            /* Sidebar enabled style (desktop) */
-            @media(min-width: 767px) {
-                .about-image {
-                    width: 30%; 
-                    height: auto;
-                }
-            }
-            /* Sidebar disabled style (mobile) */
-            @media(max-width: 767px) {
-                .about-image {
-                    width: 70%; 
-                    height: auto;
-                    margin-bottom: 2em !important;
-                }
-            }
-            
-        img.img-inline.img-responsive.about-image(src='/resources/images/profile_outside.png', alt='Portrait of Jon')
-
         section#bio
+            img.about-image.img-inline.img-responsive(src='/resources/images/profile_outside.png', alt='Portrait of Jon')
             p.
                 I'm a software developer and graduate student based in Orono, Maine. I really enjoy
                 creative coding; I've done projects all over the place, from fluid simulation to 
@@ -67,8 +70,37 @@ append content
                 and Engineering. My work focuses on the use of augmented reality technology
                 to help people with sensory impairments to navigate.
 
+    section#contact
+        h1 Contact
+        p
+            a(href='/resources/Resume_Jonathan_Cole_2017.pdf') Resume (PDF)
+            br
+            a(href='https://www.linkedin.com/in/joncole04412') LinkedIn
+            br
+            // Email hidden with Hivelogic Enkoder
+            | <script type="text/javascript">
+            | //<![CDATA[
+            | <!--
+            | var x="function f(x){var i,o=\"\",l=x.length;for(i=0;i<l;i+=2) {if(i+1<l)o+=" +
+            | "x.charAt(i+1);try{o+=x.charAt(i);}catch(e){}}return o;}f(\"ufcnitnof x({)av" +
+            | " r,i=o\\\"\\\"o,=l.xelgnhtl,o=;lhwli(e.xhcraoCedtAl(1/)3=!05{)rt{y+xx=l;=+;" +
+            | "lc}tahce({)}}of(r=i-l;1>i0=i;--{)+ox=c.ahAr(t)i};erutnro s.buts(r,0lo;)f}\\" +
+            | "\"(2)10\\\\,z\\\"4p00\\\\\\\\27\\\\07\\\\03\\\\\\\\02\\\\0Z\\\\25\\\\05\\\\" +
+            | "00\\\\\\\\XU3U03\\\\\\\\ZX\\\\S\\\\\\\\W\\\\4o03\\\\\\\\34\\\\00\\\\03\\\\\\"+
+            | "\\37\\\\02\\\\03\\\\\\\\DLEHKK4I03\\\\\\\\03\\\\0|\\\\qr2~swuxVp%'&'u!acbn`" +
+            | "dg3jsel n=]30\\\\00\\\\03\\\\\\\\16\\\\03\\\\02\\\\\\\\0Z03\\\\\\\\UD3^03\\" +
+            | "\\\\\\30\\\\06\\\\02\\\\\\\\06\\\\00\\\\03\\\\\\\\02\\\\00\\\\03\\\\\\\\1@0" +
+            | "3\\\\\\\\02\\\\06\\\\01\\\\\\\\07\\\\04\\\\03\\\\\\\\13\\\\00\\\\01\\\\\\\\" +
+            | "02\\\\0\\\\\\\\(\\\"}fo;n uret}r);+)y+^(i)t(eAodrCha.c(xdeCoarChomfrg.intr=" +
+            | "So+7;12%=;y=2y*))+y02(1i>f({i+)i+l;i<0;i=r(foh;gten.l=x,l\\\"\\\\\\\"\\\\o=" +
+            | "i,r va){,y(x fontincfu)\\\"\")"                                              ;
+            | while(x=eval(x));
+            | //-->
+            | //]]>
+            | </script>
+
     section#work
-        h2 Work
+        h1 Work
         p.highlight #[b Current:]
         ul.arrow-marks
             li
@@ -83,14 +115,14 @@ append content
                 p VR Installation - #[i Maine Discovery Museum]
         
     section#education
-        h2 Education
+        h1 Education
         ul.arrow-marks
             li
                 p #[b B.S. Computer Science] - #[i Spring 2015, University of Maine]
             li
                 p #[b M.S. Spatial Information Science and Engineering] - #[i Summer 2017 (expected), University of Maine]
     section#skills
-        h2 Skills
+        h1 Skills
         p.
             I've worked with a variety of languages and tools during my time at the VEMILab, 
             and have worked extensively with Unity. Much of my time has been spent making 
@@ -118,32 +150,4 @@ append content
         p.
             You can see a sample of my public work at my 
             #[a(href='https://www.github.com/seieibob') GitHub page].
-            
-    section#contact
-        h2 Contact
-        p
-            a(href='/resources/Resume_Jonathan_Cole_2017.pdf') Resume (PDF)
-            br
-            a(href='https://www.linkedin.com/in/joncole04412') LinkedIn
-            br
-            // Email hidden with Hivelogic Enkoder
-            | <script type="text/javascript">
-            | //<![CDATA[
-            | <!--
-            | var x="function f(x){var i,o=\"\",l=x.length;for(i=0;i<l;i+=2) {if(i+1<l)o+=" +
-            | "x.charAt(i+1);try{o+=x.charAt(i);}catch(e){}}return o;}f(\"ufcnitnof x({)av" +
-            | " r,i=o\\\"\\\"o,=l.xelgnhtl,o=;lhwli(e.xhcraoCedtAl(1/)3=!05{)rt{y+xx=l;=+;" +
-            | "lc}tahce({)}}of(r=i-l;1>i0=i;--{)+ox=c.ahAr(t)i};erutnro s.buts(r,0lo;)f}\\" +
-            | "\"(2)10\\\\,z\\\"4p00\\\\\\\\27\\\\07\\\\03\\\\\\\\02\\\\0Z\\\\25\\\\05\\\\" +
-            | "00\\\\\\\\XU3U03\\\\\\\\ZX\\\\S\\\\\\\\W\\\\4o03\\\\\\\\34\\\\00\\\\03\\\\\\"+
-            | "\\37\\\\02\\\\03\\\\\\\\DLEHKK4I03\\\\\\\\03\\\\0|\\\\qr2~swuxVp%'&'u!acbn`" +
-            | "dg3jsel n=]30\\\\00\\\\03\\\\\\\\16\\\\03\\\\02\\\\\\\\0Z03\\\\\\\\UD3^03\\" +
-            | "\\\\\\30\\\\06\\\\02\\\\\\\\06\\\\00\\\\03\\\\\\\\02\\\\00\\\\03\\\\\\\\1@0" +
-            | "3\\\\\\\\02\\\\06\\\\01\\\\\\\\07\\\\04\\\\03\\\\\\\\13\\\\00\\\\01\\\\\\\\" +
-            | "02\\\\0\\\\\\\\(\\\"}fo;n uret}r);+)y+^(i)t(eAodrCha.c(xdeCoarChomfrg.intr=" +
-            | "So+7;12%=;y=2y*))+y02(1i>f({i+)i+l;i<0;i=r(foh;gten.l=x,l\\\"\\\\\\\"\\\\o=" +
-            | "i,r va){,y(x fontincfu)\\\"\")"                                              ;
-            | while(x=eval(x));
-            | //-->
-            | //]]>
-            | </script>
+        
