--- a/page/pages/dust/index.pug
+++ b/page/pages/dust/index.pug
@@ -96,13 +96,16 @@ append head
             display: block;
             margin-left: auto;
             margin-right: auto;
-            margin-top: 5em;
+            margin-top: 3em;
             margin-bottom: 1.5em;
             position: relative;
         }
 
     // Get latest version of Guify off of NPM
     script(src='https://unpkg.com/guify')
+
+append title
+    | Dust
 
 append content
     .row
@@ -114,12 +117,8 @@ append content
                 strong Epilepsy Warning:
                 |  Some settings can cause bright flashing.
 
-            hr
-
-
         .col-md-10
             section#Main
-            h1 Dust
                 p.
                     Dust is a WebGL-based simulator / renderer for various Cellular Automata. The simulation 
                     is largely based on <a href="https://sanojian.github.io/cellauto/">CellAuto</a>, and many 
