--- a/page/pages/mazer/index.pug
+++ b/page/pages/mazer/index.pug
@@ -38,7 +38,7 @@ append head
             display: block;
             margin-left: auto;
             margin-right: auto;
-            margin-top: 5em;
+            margin-top: 3em;
             margin-bottom: 1.5em;
             position: relative;
         }
@@ -46,17 +46,17 @@ append head
     // Get latest version of Guify off of NPM
     script(src='https://unpkg.com/guify')
         
-
+append title
+    | Mazer
+    
 append content
     .row
         .col-md-10
             object
                 #mazer-container
-            hr
 
         .col-md-10
             section#Main
-            h1 Mazer
                 p.
                     This is a little program that generates and solves various types
                     of mazes. I will be revisiting this in the future when I have more 
