--- a/page/pages/media-ecology/index.pug
+++ b/page/pages/media-ecology/index.pug
@@ -21,13 +21,13 @@ block dinosaur
 append headinfo
     meta(name='ROBOTS', content='INDEX, FOLLOW')
     meta(name='description', content='Waldorf - Media Ecology Project')
-    title Waldorf - Media Ecology Project
+    title Media Ecology Project - Waldorf
 
-
+append title
+    | Media Ecology Project - Waldorf
+    
 append content
     .row
-        .col-md-12
-            h1 Waldorf - Media Ecology Project
         .col-md-10
             video(width="640" height="480" playsinline)
                 source(src='http://sachinchoolur.github.io/lightGallery/static/videos/video2.mp4', type='video/mp4')
