--- a/page/pages/spurious-spatial-correlations/index.pug
+++ b/page/pages/spurious-spatial-correlations/index.pug
@@ -24,39 +24,40 @@ append headinfo
     title Spurious (Spatial) Correlations
 
 
+append title
+    | Spurious (Spatial) Correlations
 append content
-    h1 Spurious (Spatial) Correlations
     p
         | This is a project I did for Introduction to GIS at my university. Inspired by 
         a(href='http://www.tylervigen.com') Tyler Vigen's Spurious Correlations
         | , I wanted to apply similar techniques to GIS data in the state of Maine. Below are my results.
     hr
     section
-        h2 Eagles and K-Cups
+        h1 Eagles and K-Cups
         p
             | With the exception of Washington County, eagles seem to make their homes in areas where household K-Cup ownership is at or higher than the national average.
         img.img-responsive.center-block(src='images/EaglesAndKCups.png', alt='')
     br
     section
-        h2 Schools and Aquifers
+        h1 Schools and Aquifers
         p
             | 589 of Maine’s 795 schools are within 3 km of an aquifer. This means that if you are at a school, there is a 74% chance that you are within walking distance of a significant source of groundwater.
         img.img-responsive.center-block(src='images/SchoolsAndAquifers.png', alt='')
     br
     section
-        h2 U.S. Cellular Coverage and Oil Spill Hotspots
+        h1 U.S. Cellular Coverage and Oil Spill Hotspots
         p
             | US Cellular offers great coverage in areas where hazardous oil spills occur the most.
         img.img-responsive.center-block(src='images/OilSpillsAndUSCellularCoverage.png', alt='')
     br
     section
-        h2 Cemeteries and Broadband Coverage
+        h1 Cemeteries and Broadband Coverage
         p
             | 3875 of Maine's 3929 cemeteries are located exactly within broadband coverage areas (98.63%).
         img.img-responsive.center-block(src='images/CemeteriesAndBroadband.png', alt='')
     br
     section
-        h2 Red Cross Facilities and Bedrock Formation Eras
+        h1 Red Cross Facilities and Bedrock Formation Eras
         p
             | In what I can only consider to be a deliberate move, Red Cross has built their facilities in Maine on top of bedrock formed before the Devonian era. This means that if you got into a time machine and went back to the period at which the bedrock was formed beneath any Red Cross facility, you would not find sharks, ferns, trees, insects, or land vertebrates.
         img.img-responsive.center-block(src='images/RedCrossAndBedrock.jpg', alt='')
@@ -75,7 +76,7 @@ append content
             li
                 a(href='https://usm.maine.edu/gis/digital-atlas') University of Southern Maine's Digital Atlas
             li
-                p ESRI Online Catalog
+                span ESRI Online Catalog
 
 
 
