--- a/sass/partials/sidebar.scss
+++ b/sass/partials/sidebar.scss
@@ -1,184 +1,44 @@
-//Default theme
-//$cell-color: #2e353d;
-//$accent-color: #23282e;
-//$cell-highlighted-color: #4f5b69;
-//$cell-highlighted-accent-color: #d19b3d;
-//$cell-text-color: #e1ffff;
-//$subcell-color: #181c20;
-//$subcell-highlighted-color: #020203;
-//$brand-text-color: #primary_text_color;
+$navbar-width: 200px;
 
-//Dark theme
-$cell-color: $theme_background_color;
-$accent-color: $primary_color;//#23282e;
-$cell-highlighted-color: #212933;//#4f5b69;
-$cell-highlighted-accent-color: $secondary_color;//#d19b3d;
-$cell-text-color: $primary_text_color;//#e1ffff;
-$subcell-color: #101315;
-$subcell-highlighted-color: $cell_highlighted_color;
-$divider-color: $primary_color;
-$brand-text-color: #fff;
+$text-color: $primary_text_color;
+$background-color: #E8E8E8;
 
-//Light theme
-//$cell-color: $theme_background_color;
-//$accent-color: $primary_color;//#23282e;
-//$cell-highlighted-color: #4f5b69;
-//$cell-highlighted-accent-color: #d19b3d;
-//$cell-text-color: $primary_text_color;//#e1ffff;
-//$subcell-color: #181c20;
-//$subcell-highlighted-color: #020203;
-//$divider-color: $primary_color;
-//$brand-text-color: #fff;
+$brand-background-color: #424242;
+$brand-text-color: #FFFFFF;
 
+//$cell-color: #fff;
+$cell-text-color: #000;
+$cell-highlighted-color: #fff;
+$cell-border-color: #B4B4B4;
 
-$navbar-width: 220px;
-
-//Sidebar stuff
-.nav-side-menu {
-    overflow: auto;
-    //font-family: verdana;
+#sidebar {
     font-family: $body-font;
     font-size: 12px;
     font-weight: 200;
-    background-color: $cell-color;
+    color: $text-color;
+
+    background-color: $background-color;
+
     position: fixed;
-    top: 0px;
+    top: 0;
     width: $navbar-width;
     height: 100%;
-    color: $cell-text-color;
-    
+
     user-select: none;
+    overflow: hidden;
+    display: block;
 
-    .brand {
-        background-color: $accent-color;
-        color: $brand-text-color;
-        line-height: 50px;
-        display: block;
-        text-align: center;
-        font-size: 14px;
-        user-select: none;
-        cursor: default;
+    //border-right: 1px solid black;
 
-        a {
-            color: $brand-text-color;
-            text-decoration: none;
-        }
+    @include mobile {
+        position: relative;
+        width: 100%;
     }
 
     .toggle-btn {
         display: none;
-    }
 
-    ul, li {
-        list-style: none;
-        padding: 0px;
-        margin: 0px;
-        line-height: 35px;
-        cursor: pointer;
-
-        .collapsed{
-            .arrow:before{
-                font-family: FontAwesome;
-                content: "\f053";
-                display: inline-block;
-                padding-left:10px;
-                padding-right: 10px;
-                vertical-align: middle;
-                float: right;
-            }
-        }
-        
-    }
-
-    ul:not(collapsed) .arrow:before,
-    li:not(collapsed) .arrow:before {
-        font-family: FontAwesome;
-        content: "\f078";
-        display: inline-block;
-        padding-left: 10px;
-        padding-right: 10px;
-        vertical-align: middle;
-        float: right;
-    }
-
-    ul .active,
-    li .active {
-        border-left: 3px solid $cell-highlighted-accent-color;
-        background-color: $cell-highlighted-color;
-    }
-
-    ul .sub-menu li.active,
-    li .sub-menu li.active {
-        color: $cell-highlighted-accent-color;
-        a {
-            color: $cell-highlighted-accent-color;
-        }
-    }
-
-    ul .sub-menu li,
-    li .sub-menu li {
-        background-color: $subcell-color;
-        border: none;
-        line-height: 28px;
-        border-bottom: 1px solid $accent-color;
-        margin-left: 0px;
-    }
-
-    ul .sub-menu li:hover,
-    li .sub-menu li:hover {
-        background-color: $subcell-highlighted-color;
-    }
-
-    // Arrows before submenu items
-    ul .sub-menu li:before,
-    li .sub-menu li:before {
-        font-family: FontAwesome;
-        content: "\f105";
-        display: inline-block;
-        padding-left: 10px;
-        padding-right: 10px;
-        vertical-align: middle;
-    }
-
-    li {
-        padding-left: 0px;
-        border-left: 3px solid $cell-color;
-        border-bottom: 1px solid $accent-color;
-
-        a {
-            text-decoration: none;
-            color: $cell-text-color;
-            font-weight: 200;
-            i {
-                padding-left: 10px;
-                width: 20px;
-                padding-right: 2.0em;
-                //font-size: 20px;
-            }
-        }
-        &:hover {
-            border-left: 3px solid $cell-highlighted-accent-color;
-            background-color: $cell-highlighted-color;
-            transition: all 1s ease;
-        }
-    }
-
-    
-    
-
-}
-
-// Sidebar is collapsed
-@media (max-width: 767px) {
-    .nav-profile-image {
-        display: none;
-    }
-    .nav-side-menu {
-        position: relative;
-        width: 100%;
-        margin-bottom: 10px;
-
-        .toggle-btn {
+        @include mobile {
             display: block;
             cursor: pointer;
             position: absolute;
@@ -186,50 +46,199 @@ $navbar-width: 220px;
             top: 10px;
             z-index: 10;
             padding: 3px;
-            background-color: $primary_color;
+            background-color: transparent;
             color: $brand_text_color;
             width: 40px;
             text-align: center;
         }
-        .brand {
+    }
+
+    .brand {
+        background-color: $brand-background-color;
+        color: $brand-text-color;
+
+        line-height: 50px;
+        display: block;
+        text-align: center;
+        font-size: 14px;
+        font-family: $title-font;
+
+        @include mobile {
             text-align: left;
             font-size: 22px;
             padding-left: 20px;
             line-height: 50px;
         }
 
-        li {
-            line-height: 50px;
-            //font-size: 18px;
+        a {
+            color: $brand-text-color;
+            text-decoration: none;
+        }
+    }
+
+    #sidebar-cells {
+        $desktop-cell-height: 35px;
+        $mobile-cell-height: 45px;
+
+        @include desktop {
+            display: block;
+        }
+    
+        // Cell list
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+        
+        // Cells
+        ul li {
+            cursor: pointer;
+
+            height: $desktop-cell-height;
+            line-height: $desktop-cell-height;
+
+            @include mobile {
+                font-size: 16px;
+                line-height: $mobile-cell-height;
+                height: $mobile-cell-height;
+            }
+
+            .cell-icon-container {
+
+                display: inline-block;
+                margin: 0;
+                padding: 0;
+                width: 30px;
+                text-align: center;
+
+                .span {
+                    width: 100%;
+                }
+
+                @include desktop {
+                    font-size: 14px;
+                    .span {
+                        line-height: 14px;
+                    }
+                }
+
+                @include mobile {
+                    font-size: 18px;
+                    .span {
+                        line-height: 18px;
+                    }
+                }
+
+            }
+
+            .cell-text {
+                padding: 0;
+                padding-left: 0.5em;
+                display: inline-block;
+                height: 100%;
+                //vertical-align: top;
+            }
+    
+            a {
+                display: block;
+                text-decoration: none;
+                color: $cell-text-color;
+                font-weight: 200;
+                height: $desktop-cell-height;
+
+                @include mobile {
+                    height: $mobile-cell-height;
+                }
+
+                div {
+                    padding-left: 10px;
+                    width: 20px;
+                    padding-right: 2.0em;
+                    //font-size: 20px;
+                }
+
+            }
+
+            .arrow:before {
+                font-family: FontAwesome;
+                padding-left: 10px;
+                padding-right: 10px;
+                vertical-align: middle;
+                float: right;
+                content: "\f078";
+                transition: transform 0.25s ease;
+            }
+            &.collapsed .arrow:before {
+                // Rotate the arrow when collapsed
+                transform: rotate(90deg);
+            }
+            
+            &:hover, &:focus {
+                //border-left: 3px solid $cell-highlighted-accent-color;
+                background-color: $cell-highlighted-color;
+                transition: all 0.5s ease;
+
+                .fa {
+                    color: $primary-color;
+                }
+            }
+
+            &:active {
+                //background-color: $primary-color;
+            }
+
         }
 
-        ul .sub-menu li,
-        li .sub-menu li {
-            line-height: 43px;
+        // Cells in collapsible divs
+        .sub-menu li {
+            padding-left: 0.5em;
+            border-left: 5px solid $brand-background-color;
+
+            &:hover {
+                border-color: $primary-color;
+            }
+
+            @include mobile {
+                line-height: $mobile-cell-height;
+            }
+        }
+
+    }
+
+    // Style the "skip to main content" button for accessibility users
+    .sr-only {
+        background-color: $brand-background-color;
+        color: $brand-text-color;
+        text-decoration: none;
+        display: block;
+        text-align: center;
+        font-family: $title-font;
+
+        &:focus {
+            color: $primary-color;
         }
     }
 
 }
 
-// Sidebar is enabled
-@media (min-width: 767px) {
-    .nav-side-menu .menu-list .menu-content {
-        display: block;
-    }
-    .main-content {
+@include desktop {
+    #body-container {
+        margin-top: 0;
         width: calc(100% - #{$navbar-width});
         position: absolute;
         left: #{$navbar-width};
-        // img.img-inline.img-responsive {
-        //     width: 30% !important;
-        // }
     }
-    .nav-profile-image {
-        border-color: black;
-        background-color: black;
-        background-size: 0.5em;
-        //border-radius: 12px;
-        //margin: 1em;
-    }
+}
 
+@include mobile {
+    .main-content {
+        margin-top: 0.5em;
+    }
+}
+
+@include desktop {
+    .main-content {
+        margin-top: 2em;
+    }
 }
