--- a/partials/layout.pug
+++ b/partials/layout.pug
@@ -36,7 +36,7 @@ html
             script.
                 WebFont.load({
                 google: {
-                    families: ['Lato:300,400,500', 'Work+Sans:500,700', 'Rye']
+                    families: ['Lato:300,400,500', 'Work+Sans:500,700']
                 }
                 });
 
