--- a/page/pages/guify/index.pug
+++ b/page/pages/guify/index.pug
@@ -58,7 +58,7 @@ append head
             margin-left: auto;
             margin-right: auto;
             margin-top: 3em;
-            margin-bottom: 1.5em;
+            margin-bottom: 0.5em;
             position: relative;
         }
 
@@ -89,7 +89,7 @@ append content
                         #content-text [content]
 
             br
-            p(style='text-align: center;').
+            p(style='text-align: center; margin-bottom: 1.5em;').
                 Themes: 
                 <a href="javascript:void(0);" onclick="onThemeChange('light');">Light</a> - 
                 <a href="javascript:void(0);" onclick="onThemeChange('dark');">Dark</a> - 
