--- a/partials/layout.pug
+++ b/partials/layout.pug
@@ -31,6 +31,9 @@ html
                     background-color: #fff;
                 }
 
+            // Load barba.js
+            <script src="barba.min.js" type="text/javascript"></script>
+
             // Load web fonts
             script(src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js")
             script.
@@ -72,18 +75,20 @@ html
             // Include sidebar
             include sidebar.pug
 
-            div#body-container
-                div.title-header
-                    block title
-                    block title-header-hook
+            #barba-wrapper
+                #barba-container
+                    div#body-container
+                        div.title-header
+                            block title
+                            block title-header-hook
 
-                block before-content
+                        block before-content
 
-                main.container.main-content(role='main')
-                    article
-                        block content
+                        main.container.main-content(role='main')
+                            article
+                                block content
 
-                block after-content
+                        block after-content
 
             // Page JavaScript
             script.
@@ -103,6 +108,8 @@ html
                 });
                 //Scroll to url anchor
                 $(document).ready(function(){
+                    Barba.Pjax.start();
+                    Barba.Prefetch.init();
                     if($(location.hash).length && location.hash != "#"){ //If the tag actually exists on the page
                         $('html, body, section').animate({
                             'scrollTop': $(location.hash).offset().top
